UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Vision_GCP_SFDC_Order_Status__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Unique_Identifier__c</fullName>
        <formula>IF(AND(ISNULL( Vision_Hierachy_Code__c ), ISNULL( Vision_Product__r.ProductCode )), null,Vision_Hierachy_Code__c+&quot;-&quot;+Vision_Product__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>GCP Unique Identifier that we are getting from GCP</inlineHelpText>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Updated__c</fullName>
        <label>Latest Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRISM_SAP_Created_Date__c</fullName>
        <label>SAP_Created_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRISM_SAP_Created_Time__c</fullName>
        <label>SAP_Created_Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Value__c</fullName>
        <formula>( VALUE(Vision_Net_Value__c) /   Vision_Order_Quantity__c) * Vision_GCP_Ship_Quanity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_field__c</fullName>
        <label>Testing field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP SFDC Order Status</relationshipLabel>
        <relationshipName>GCP_SFDC_Order_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Created_Date__c</fullName>
        <description>This field is used to store the created date of data</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Created_Date__c</fullName>
        <label>GCP Delivery Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Date_Internal_Use__c</fullName>
        <description>We are calculating PGI Date + 10 business days</description>
        <formula>IF(ISNULL(Vision_PGI_Date__c),null,Vision_PGI_Date__c +
case(
  MOD(
    Vision_PGI_Date__c - DATE(1900, 1, 1), 7
    )
    ,5,1,0
)
+
10 + 2 * (
    FLOOR(
        (10 +
        case(MOD(Vision_PGI_Date__c - DATE(1900, 1, 1), 7),
                0,0, 
                1,1,
                2,2,
                3,3,
                4,4,
                5,-1, 
                6,-1,
                0
                )
        )/5
    )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Date (Internal Use)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Delivery_Quantity__c</fullName>
        <label>Delivery Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Doc_Item__c</fullName>
        <label>Doc Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Price__c</fullName>
        <label>GCP Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Quantity_in_Order_UOM__c</fullName>
        <label>GCP Quantity in Order UOM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Ship_Date__c</fullName>
        <label>GCP Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Ship_Location_City__c</fullName>
        <label>GCP Ship Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Ship_Location_State__c</fullName>
        <label>GCP Ship Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Ship_Quanity__c</fullName>
        <label>GCP Ship Quanity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Shipping_Method__c</fullName>
        <label>GCP Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_DateTime__c</fullName>
        <label>GCP Update DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Date__c</fullName>
        <description>This field is when GCP is pulling their data</description>
        <label>Data Lake Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_GCP_Update_Time__c</fullName>
        <label>GCP Update Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Goods_Issue_Date__c</fullName>
        <label>Goods Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Hierachy_Code__c</fullName>
        <label>Vision Hierachy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Delivered_and_Delayed__c</fullName>
        <formula>IF( AND( NOT(ISBLANK(Vision_Delivery_Number__c)), NOT(ISBLANK(Vision_PGI_Date__c)), OR(Vision_PGI_Date__c  + 10 &gt;  Vision_Requested_Delivery_Date__c, TODAY() &gt; Vision_Requested_Delivery_Date__c)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Delivered and Delayed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_OTIF__c</fullName>
        <formula>IF( AND(ISBLANK( Vision_Requested_Delivery_Date__c ), ISBLANK(  Vision_Delivery_Date_Internal_Use__c ), ISBLANK( Vision_GCP_Ship_Quanity__c ), ISBLANK( Vision_Order_Quantity__c )), false, IF( AND(Vision_Requested_Delivery_Date__c &gt;= Vision_Delivery_Date_Internal_Use__c , Vision_GCP_Ship_Quanity__c &gt;= Vision_Order_Quantity__c ) , true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is OTIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Open_and_Delayed__c</fullName>
        <formula>IF( AND( Vision_Delivery_Number__c == null ,Vision_Order_Date__c + 14 &gt; Vision_Requested_Delivery_Date__c) , true, IF( AND(Vision_Delivery_Number__c != null, Vision_PGI_Date__c == null,Vision_Delivery_Created_Date__c != null, Vision_Delivery_Created_Date__c + 10 &gt; Vision_Requested_Delivery_Date__c), true , false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Open and Delayed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_Code__c</fullName>
        <label>NDC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_NDC_Desc__c</fullName>
        <label>NDC Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Value__c</fullName>
        <label>Net Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Open_Order_Quantity__c</fullName>
        <label>Open Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Number_Internal_Use__c</fullName>
        <formula>VALUE(Vision_Order_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number (Internal Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Status__c</fullName>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PGI_Date__c</fullName>
        <label>PGI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PRISM_Update_DateTime__c</fullName>
        <label>PRISM Update DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP SFDC Order Status</relationshipLabel>
        <relationshipName>GCP_SFDC_Order_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_SAP_Created_DateTime__c</fullName>
        <label>SAP_Created_DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_to_Customer_Name__c</fullName>
        <label>Ship to Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sold_to_Customer_Code__c</fullName>
        <label>Sold to Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sold_to_Customer_Name__c</fullName>
        <label>Sold to Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_DateTime__c</fullName>
        <label>Vision Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>GCP SFDC Order Status</label>
    <nameField>
        <displayFormat>sfdc-ord-status-{0000000}</displayFormat>
        <label>GCP SFDC Order Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP SFDC Order Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>